--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<!doctype html><html><body><h1>✅ Docker CI works</h1></body></html>
+<!doctype html>
+<html>
+  <head><meta charset="utf-8"><title>Docker CI OK</title></head>
+  <body style="font-family:system-ui;padding:2rem">
+    <h1>✅ Hello from Docker CI</h1>
+    <p>This is a placeholder page for CI testing.</p>
+  </body>
+</html>
